added hamburger menu, yay; updated main menu design; main menu draft 3/8

--- a/public/menu/appetizers+soup.html
+++ b/public/menu/appetizers+soup.html
@@ -4,10 +4,8 @@
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet" text="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Julius+Sans+One" rel="stylesheet" text="text/css">
-
 	<link href="menustyles.css" rel="stylesheet" type="text/css">
 	<link href="../styles.css" rel="stylesheet" type="text/css">
-	<script src="loose-scripts.js"></script>
 	<title>THE ORIENT</title>
 </head>
 <body>
@@ -41,7 +39,9 @@
 			<a href="combos.html"><li>COMBOS</li></a>
 		</ul>
 	</div>
-	<div class="suboptions menu" style="margin-top: 45px;">
+	<div class="suboptions menu">
+		<input type="checkbox" id="menu-toggle" />
+			<label for="menu-toggle" class="label-toggle"></label>
 		<ul>
 			<a href="appetizers+soup.html">
 				<li> APPETIZERS + SOUP </li></a>
@@ -61,7 +61,6 @@
 		<p> APPETIZERS + SOUP </p>
 	</div>
 	<div id="contentAS">
-
 		<section class="content">
 			<h1> APPETIZERS </h1>
 			<div class="column">
@@ -73,40 +72,40 @@
 					<p>FRESH DRY SPARERIBS <span>$7.95</span></p>
 					<p class="desc">fried spareribs seasoned lightly with garlic salt</p>
 				</div>
-				<div class="item" style="border:none;">
+				<div class="item last">
 					<p>DEEP FRIED WON TON <span>$7.95</span></p>
 					<p class="desc">fried won tons with a side of sweet &amp; sour sauce</p>
 				</div>
 			</div>
-			<div class="column" style="float: right;">
+			<div class="column">
 				<div class="item">
 					<p>SPRING ROLL &nbsp;[1] <span>$2.50</span></p>
 					<p class="desc">house-made pork &amp; vegetable spring roll</p>
 				</div>
-				<div class="item" style="border: none;">
+				<div class="item last">
 					<p>COMBO PLATTER <span>$16.95</span></p>
 					<p class="desc">a platter of assorted fried delights. <br><br>includes dry ribs + chicken wings + spring rolls + deep fried prawns + deep fried chicken balls </p>
 				</div>
 			</div>
 		</section>
-
-		<section class="content" style="margin-top: 80px;">
+		<section class="content">
 			<h1> SOUPS </h1>
 			<div class="column">
 				<div class="item">
-					<p>WON TON SOUP <span>$3.95/single &nbsp; &nbsp; $9/bowl</span></p>
+					<p>WON TON SOUP <span>$3.95/single &nbsp; &nbsp; $9/bowl</span>
+					</p>
 					<p class="desc">home-made pork won tons in a light broth</p>
 				</div>
 				<div class="item">
 					<p>HOUSE WOR WON TON SOUP <span>$15.50</span></p>
 					<p class="desc">won ton soup topped with an assorted stir-fried meats and vegetables</p>
 				</div>
-				<div class="item" style="border:none;">
+				<div class="item last">
 					<p>HOT &amp; SOUR SOUP <span>$5/single &nbsp; &nbsp; $10/bowl</span></p>
 					<p class="desc">a unique hot &amp; sour soup with assorted meats and vegetables, perfect for a chilly day </p>
 				</div>
 			</div>
-			<div class="column" style="float: right;">
+			<div class="column">
 				<div class="item">
 					<p>NOODLE SOUP <span>$9.00</span></p>
 					<p class="desc"><strong>choose one: BEEF / CHICKEN / PORK / VEGETARIAN</strong>
@@ -117,7 +116,7 @@
 					<p>WON TON NOODLE SOUP <span>$9.00</span></p>
 					<p class="desc">egg noodles + won tons + soup </p>
 				</div>
-				<div class="item" style="border:none;">
+				<div class="item last">
 					<p>CHICKEN &amp; CREAM CORN SOUP <span>$10/regular &nbsp; &nbsp; $12.5/large</span></p>
 					<p class="desc">a chicken and corn soup finished with an egg swirl</p>
 				</div>
