--- a/public/menu/combos.html
+++ b/public/menu/combos.html
@@ -63,39 +63,39 @@
 			<div class="column">
 				<div class="item">
 					<p>[ # 01 ] <span>$12.50</span></p>
-					<p class="desc center">CHICKEN CHOW MEIN &nbsp;+&nbsp; SWEET &amp; SOUR PORK &nbsp;+&nbsp; DEEP FRIED PRAWNS</p>
+					<p class="desc">CHICKEN CHOW MEIN &nbsp;<b>+</b>&nbsp; SWEET &amp; SOUR PORK <br>&nbsp;<b>+</b>&nbsp; DEEP FRIED PRAWNS</p>
 				</div>
 				<div class="item">
 					<p>[ # 02 ] <span>$12.50</span></p>
-					<p class="desc center">CHICKEN CHOW MEIN &nbsp;+&nbsp; SWEET &amp; SOUR PORK &nbsp;+&nbsp; ALMOND CHICKEN </p>
+					<p class="desc">CHICKEN CHOW MEIN &nbsp;<b>+</b>&nbsp; SWEET &amp; SOUR PORK <br>&nbsp;<b>+</b>&nbsp; ALMOND CHICKEN </p>
 				</div>
 				<div class="item">
 					<p>[ # 03 ] <span>$12.50</span></p>
-					<p class="desc center">CHICKEN CHOW MEIN &nbsp;+&nbsp; SWEET &amp; SOUR PORK &nbsp;+&nbsp; CHICKEN FRIED RICE </p>
+					<p class="desc">CHICKEN CHOW MEIN &nbsp;<b>+</b>&nbsp; SWEET &amp; SOUR PORK <br>&nbsp;<b>+</b>&nbsp; CHICKEN FRIED RICE </p>
 				</div>
 				<div class="item" style="border:none;">
 					<p>[ # 04 ] <span>$12.50</span></p>
-					<p class="desc center">CHICKEN CHOW MEIN &nbsp;+&nbsp; SWEET &amp; SOUR PORK &nbsp;+&nbsp; BEEF CHOP SUEY </p>
+					<p class="desc">CHICKEN CHOW MEIN &nbsp;<b>+</b>&nbsp; SWEET &amp; SOUR PORK <br>&nbsp;<b>+</b>&nbsp; BEEF CHOP SUEY </p>
 				</div>
 			</div>
 
 			<div class="column" style="float: right;">
 				<div class="item">
 					<p>[ # 05 ] &nbsp; &nbsp; VEGGIE COMBO <span>$12.50</span></p>
-					<p class="desc center">VEGGIE FRIED RICE &nbsp;+&nbsp; MUSHROOM CHOP SUEY &nbsp;+&nbsp; MUCHROOM CHOW MEIN </p>
+					<p class="desc">VEGGIE FRIED RICE &nbsp;<b>+</b>&nbsp; MUSHROOM CHOP SUEY &nbsp;+&nbsp; MUCHROOM CHOW MEIN </p>
 				</div>
 				<div class="item">
 					<p>[ # 06 ] &nbsp; &nbsp; COMBO KING <span>$14.95</span></p>
-					<p class="desc center">CHICKEN CHOW MEIN &nbsp;+&nbsp; BEEF CHOP SUEY &nbsp;+&nbsp; SWEET &amp; SOUR PORK &nbsp;+&nbsp; DEEP FRIED PRAWNS </p>
+					<p class="desc">CHICKEN CHOW MEIN &nbsp;+&nbsp; BEEF CHOP SUEY &nbsp;+&nbsp; SWEET &amp; SOUR PORK &nbsp;+&nbsp; DEEP FRIED PRAWNS </p>
 				</div>
 				<div class="item">
 					<p>[ # 07 ] &nbsp; &nbsp; HOUSE COMBO A <span>$13.95</span></p>
-					<p class="desc center">HOUSE SPECIAL CHOP SUEY &nbsp;+&nbsp; CHICKEN FRIED RICE &nbsp;+&nbsp; SWEET &amp; SOUR CHICKEN BALLS 
+					<p class="desc">HOUSE SPECIAL CHOP SUEY &nbsp;+&nbsp; CHICKEN FRIED RICE &nbsp;+&nbsp; SWEET &amp; SOUR CHICKEN BALLS 
 					</p>
 				</div>
 				<div class="item" style="border:none;">
 					<p>[ # 08 ] &nbsp; &nbsp; HOUSE COMBO B <span>$14.95</span></p>
-					<p class="desc center">HOUSE SPECIAL CHOP SUEY &nbsp;+&nbsp; HOUSE SPECIAL FRIED RICE &nbsp;+&nbsp; GINGER BEEF </p>
+					<p class="desc">HOUSE SPECIAL CHOP SUEY &nbsp;+&nbsp; HOUSE SPECIAL FRIED RICE &nbsp;+&nbsp; GINGER BEEF </p>
 				</div>
 			</div>
 		</section>
