--- a/public/menu/sides+sauces.html
+++ b/public/menu/sides+sauces.html
@@ -1,129 +1,115 @@
-<div id="contentAS">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
+	<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet" text="text/css">
+	<link href="https://fonts.googleapis.com/css?family=Julius+Sans+One" rel="stylesheet" text="text/css">
+
+	<link href="menustyles.css" rel="stylesheet" type="text/css">
+	<link href="../styles.css" rel="stylesheet" type="text/css">
+	<script src="loose-scripts.js"></script>
+	<title>THE ORIENT</title>
+</head>
+<body>
+	<div class="menu-nav">
+		<div class="nav-item nav-icon" style="margin-left: 25px;">
+			<a href="../index.html" style="background-image: url('../../res/icons/svg/005-restaurant.svg')">
+			</a>
+		</div>
+		<div class="nav-item" style="margin-left: 2px;">
+			<a href="../index.html"><p> HOME </p></a>
+		</div>
+		<div class="nav-item nav-icon" style="margin-left: 15px;">
+			<a href="../contact.html" style="background-image: url('../../res/icons/svg/003-phone-with-message.svg')">
+			</a>
+		</div>
+		<div class="nav-item" style="margin-left: 0px;">
+			<p class="phone">
+				<a href="tel:+1-250-763-2988">250-763-2988</a> &nbsp;//&nbsp; <a href="tel:+1-250-763-2986">250-763-2986</a>
+			</p>
+		</div>
+	</div>
+	<div id="main">
+		<p>[ MAIN ]</p>
+		<h1 style="color: #FFAF35;">MENU</h1>
+	</div>
+	<div class="menu">
+		<ul>
+			<a href="appetizers+soup.html"><li>MAIN</li></a>
+			<a href="lunch.html"><li>LUNCH</li></a>
+			<a href="familydinners.html"><li>FAMILY DINNERS</li></a>
+			<a href="combos.html"><li>COMBOS</li></a>
+		</ul>
+	</div>
+	<div class="suboptions menu" style="margin-top: 45px;">
+		<ul>
+			<a href="appetizers+soup.html">
+				<li> APPETIZERS + SOUP </li></a>
+			<a href="friedrice+chowmein.html">
+				<li> FRIED RICE + CHOW MEIN </li></a>
+			<a href="chopsuey+eggfooyung.html">
+				<li> CHOP SUEY + EGG FOO YUNG </li></a>
+			<a href="pork+chicken.html">
+				<li> PORK + CHICKEN </li></a>
+			<a href="seafood+specialties.html">
+				<li> SEAFOOD + SPECIALTIES </li></a>
+			<a href="sides+sauces.html">
+				<li> SIDES + SAUCES </li></a>
+		</ul>
+	</div>
+	<div class="menu title">
+		<p> SIDES + SAUCES </p>
+	</div>
+	<div id="contentAS">
 		<section class="content">
-			<h1> SEAFOOD </h1>
+			<h1> SIDES </h1>
 
 			<div class="column">
-				<div class="item">
-					<p>DEEP FRIED PRAWNS &nbsp;[16] <span>$12.95</span></p>
-					<p class="desc">prawns coated in our house batter and deep fried
-					<p>
-				</div>
-				<div class="item">
-					<p>STIR-FRIED WHOLE PRAWNS <span>$16.95</span></p>
-					<p class="desc"><strong>choose one: &nbsp;BLACK BEAN SAUCE / CURRY SAUCE / SZECHUAN SAUCE / TOMATO SAUCE </strong> <br><br>
-					stir-fried prawns + sauce of choice + assorted veggies </p>
-				</div>
-				<div class="item" style="border:none;">
-					<p>SEAFOOD IN A NEST <span>$19.95</span></p>
-					<p class="desc"> stir-fried seafood medley of prawns, scallops, squid, and assorted veggies on top of a fried potato-hash nest</p>
+				<div class="item" style="border: none;">
+					<p>CHICKEN FINGERS &amp; FRIES <span>$8.00</span></p>
+					<p class="desc"> chicken fingers on a bed of fries, with a side of sweet &amp; sour sauce </p>
 				</div>
 			</div>
 
 			<div class="column" style="float: right;">
-				<div class="item">
-					<p>FRIED SCALLOPS WITH SNOW PEA <span>$17.95</span></p>
-					<p class="desc"> fried whole scallops stir-fried with snow peas and assorted veggies </p>
-				</div>
-				<div class="item">
-					<p>FRIED SCALLOPS WITH GINGER &amp; GREEN ONION <span>$18.95
-					</span></p>
-					<p class="desc"> a sizzling stir-fry of whole scallops, ginger, green onion, and assorted veggies </p>
-				</div>
-				<div class="item" style="border:none;">
-					<p>DEEP FRIED SQUID WITH SPICY SALT <span>$13.95</span></p>
-					<p class="desc"> fried squid with pepper-salt and chili, topped off with quickly stif-fried bell peppers, onions, and carrots. a house specialty </p>
+				<div class="item" style="border: none;">
+				<p>FRENCH FRIES <span>$4.25</span></p>
+				<p class="desc"> just a side order of fries! :) </p>
 				</div>
 			</div>
 		</section>
 
 		<section class="content" style="margin-top: 80px;">
-			<h1 style="margin-bottom: 20px;"> EXOTIC SPECIALTIES </h1>
+			<h1> SAUCES </h1>
 
 			<div class="column">
 				<div class="item">
-					<p> PHOENIX IN A NEST <span>$14.95</span></p>
-					<p class="desc"> a stir-fry of BBQ pork, chicken, and assorted veggies on top a fried potato-hash nest </p>
+					<p>SWEET &amp; SOUR SAUCE <span>$2.00</span></p>
 				</div>
 				<div class="item">
-					<p> MOO GOO GAI PAI <span>$13.95</span></p>
-					<p class="desc"> sliced chicken breast marinated in wine and exotic spices, stir-fried with fresh mushrooms </p>
-				</div>
-				<div class="item">
-					<p> GINGER BEEF or GINGER CHICKEN <span>$13.95</span></p>
-					<p class="desc"> a refreshing entree featuring sliced beef or chicken and assorted julienned veggies in our unique sweet &amp; spicy ginger sauce.</p>
-				</div>
-				<div class="item">
-					<p> PINEAPPLE CHICKEN or PORK<span>$13.95</span></p>
-					<p class="desc"> lightly battered chicken breast or pork, fried until golden brown, and topped with pineapple sauce </p>
-				</div>
-				<div class="item">
-					<p> LEMON CHICKEN <span>$13.95</span></p>
-					<p class="desc"> lightly floured chicken breasts, grilled until golden brown and served with a sweet and tangy lemon sauce </p>
-				</div>
-				<div class="item">
-					<p> KUNG PO PRAWNS &nbsp;[ HOT ] <span>$16.95</span></p>
-					<p class="desc"> whole prawns stir-fried with assorted veggies, hot chili, and garlic, topped with cashew nuts </p>
-				</div>
-				<div class="item">
-					<p> KUNG PO CHICKEN &nbsp;[ HOT ] <span>$14.95</span></p>
-					<p class="desc"> diced chicken stir-fried with assorted veggies, hot chili, and garlic, topped with cashew nuts </p>
-				</div>
-				<div class="item">
-					<p> DICED CHICKEN or SHRIMP WITH CASHEW NUTS <span>$13.95</span>
-					</p>
-					<p class="desc"> a savoury stir-fry of chicken or shrimp and assorted veggies, topped with cashew nuts </p>
-				</div>
-				<div class="item">
-					<p> MONGOLIAN BEEF &nbsp;[ HOT ] <span>$13.95</span></p>
-					<p class="desc"> an unique and saucy stir-fry featuring tender sliced beef, mushrooms, green peppers and onions in a hot &amp; spicy sauce. <br><br> *served on a sizzling plate </p>
-				</div>
-				<div class="item" style="border:none;">
-					<p> SZECHUAN BEEF or CHICKEN <span>$13.95</span></p>
-					<p class="desc"> sliced beef or chicken stir-fried with assorted veggies in a spicy and savoury Szechuan sauce </p>
+					<p>LEMON SAUCE <span>$2.00</span></p>
 				</div>
 			</div>
-
 			<div class="column" style="float: right;">
 				<div class="item">
-					<p> SLICED BEEF WITH OYSTER SAUCE <span>$13.95</span></p>
-					<p class="desc"> tender sliced beef stir-fried with assorted veggies in an oyster sauce </p>
+					<p>CURRY SAUCE <span>$2.00</span></p>
 				</div>
 				<div class="item">
-					<p> FRIED WHOLE GARLIC BUTTERFLY PRAWNS <span>$17.95</span></p>
-					<p class="desc"> whole butterflied prawns, seasoned with garlic and mild chili, grilled to perfection. <br><br>finished off with a saut&eacute; of peppers, onions, and carrots </p>
-				</div>
-				<div class="item">
-					<p> SINGAPORE-STYLE FRIED RICE NOODLES <span>$12.95</span></p>
-					<p class="desc"> rice vermicelli sauteed with shrimp, pork, chicken, and assorted veggies in a hot &amp; spicy dry curry</p>
-				</div>
-				<div class="item">
-					<p> HOMESTYLE FRIED RICE NOODLES <span>$12.95</span></p>
-					<p class="desc"> rice vermicelli sauteed with shrimp, pork, chicken, and assorted veggies</p>
-				</div>
-				<div class="item">
-					<p> BEEF CHOW FUN &nbsp;[ DRY ] <span>$12.95</span></p>
-					<p class="desc"> flat rice noodle stir-fried with beef and veggies in dark soy sauce </p>
-				</div>
-				<div class="item">
-					<p> BEEF CHOW FUN with BLACK BEAN SAUCE <span>$12.95</span></p>
-					<p class="desc"> flat rice noodle stir-fried with beef and veggies, topped with a black bean sauce </p>
-				</div>
-				<div class="item">
-					<p> TOFU HOT POT with BBQ PORK <span>$12.95</span></p>
-					<p class="desc"> cubed tofu stir-fried with sliced BBQ pork and assorted veggies. <br><br> *served in a sizzling hot pot </p>
-				</div>
-				<div class="item">
-					<p> SEAFOOD with TOFU HOT POT <span>$12.95</span></p>
-					<p class="desc"> cubed tofu stif-fried with scallops, shrimp, squid, and assorted veggies. <br><br> *served in a sizzling hot pot </p>
-				</div>
-				<div class="item">
-					<p> MA PO TOFU with MINCED BEEF <span>$12.95</span></p>
-					<p class="desc"> tofu braised with minced beef, assorted peppers, and onions in a spicy bean sauce </p>
-				</div>
-				<div class="item" style="border:none;">
-					<p> KULU CHICKEN or PORK <span>$13.95</span></p>
-					<p class="desc"> fried boneless diced chicken or pork with pineapple, peppers, and green onions in a sweet &amp; spicy sauce </p>
-				</div>
+					<p>BLACK BEAN SAUCE <span>$2.00</span></p>
 			</div>
 		</section>
 	</div>
+	<div class="footer menu" style="margin-top: 40px;">
+		<ul>
+			<a href="../index.html"><li>HOME</li></a>
+			<a href="lunch.html"><li>LUNCH</li></a>
+			<a href="appetizers+soup.html"><li>MENU</li></a>
+			<a href="../contact.html"><li>CONTACT</li></a>
+			<a href="../note.html"><li>NOTE</li></a>
+		</ul>
+	</div>
+	<div class="finalnote" >
+		<p>Copyright &copy; 2018 The Orient Restaurant . All rights reserved . Icons designed by <a href="https://www.flaticon.com">Flaticon</a></p>
+	</div>
+
+</body>
