minor stylistic changes; updated design on main menu pages

--- a/public/menu/appetizers+soup.html
+++ b/public/menu/appetizers+soup.html
@@ -10,18 +10,15 @@
 </head>
 <body>
 	<div class="menu-nav">
-		<div class="nav-item nav-icon" style="margin-left: 25px;">
-			<a href="../index.html" style="background-image: url('../../res/icons/svg/005-restaurant.svg')">
+		<div class="nav-item">
+			<a class="nav-icon" href="../index.html"
+				style="background-image: url('../../res/icons/svg/005-restaurant.svg')">
 			</a>
-		</div>
-		<div class="nav-item" style="margin-left: 2px;">
 			<a href="../index.html"><p> HOME </p></a>
 		</div>
-		<div class="nav-item nav-icon" style="margin-left: 15px;">
-			<a href="../contact.html" style="background-image: url('../../res/icons/svg/003-phone-with-message.svg')">
+		<div class="nav-item">
+			<a class="nav-icon" href="../contact.html" style="background-image: url('../../res/icons/svg/003-phone-with-message.svg')">
 			</a>
-		</div>
-		<div class="nav-item" style="margin-left: 0px;">
 			<p class="phone">
 				<a href="tel:+1-250-763-2988">250-763-2988</a> &nbsp;//&nbsp; <a href="tel:+1-250-763-2986">250-763-2986</a>
 			</p>
@@ -72,7 +69,7 @@
 					<p>FRESH DRY SPARERIBS <span>$7.95</span></p>
 					<p class="desc">fried spareribs seasoned lightly with garlic salt</p>
 				</div>
-				<div class="item last">
+				<div class="last item">
 					<p>DEEP FRIED WON TON <span>$7.95</span></p>
 					<p class="desc">fried won tons with a side of sweet &amp; sour sauce</p>
 				</div>
@@ -82,7 +79,7 @@
 					<p>SPRING ROLL &nbsp;[1] <span>$2.50</span></p>
 					<p class="desc">house-made pork &amp; vegetable spring roll</p>
 				</div>
-				<div class="item last">
+				<div class="last item">
 					<p>COMBO PLATTER <span>$16.95</span></p>
 					<p class="desc">a platter of assorted fried delights. <br><br>includes dry ribs + chicken wings + spring rolls + deep fried prawns + deep fried chicken balls </p>
 				</div>
@@ -100,7 +97,7 @@
 					<p>HOUSE WOR WON TON SOUP <span>$15.50</span></p>
 					<p class="desc">won ton soup topped with an assorted stir-fried meats and vegetables</p>
 				</div>
-				<div class="item last">
+				<div class="last item">
 					<p>HOT &amp; SOUR SOUP <span>$5/single &nbsp; &nbsp; $10/bowl</span></p>
 					<p class="desc">a unique hot &amp; sour soup with assorted meats and vegetables, perfect for a chilly day </p>
 				</div>
@@ -116,7 +113,7 @@
 					<p>WON TON NOODLE SOUP <span>$9.00</span></p>
 					<p class="desc">egg noodles + won tons + soup </p>
 				</div>
-				<div class="item last">
+				<div class="last item">
 					<p>CHICKEN &amp; CREAM CORN SOUP <span>$10/regular &nbsp; &nbsp; $12.5/large</span></p>
 					<p class="desc">a chicken and corn soup finished with an egg swirl</p>
 				</div>
