--- a/public/menu/chopsuey+eggfooyung.html
+++ b/public/menu/chopsuey+eggfooyung.html
@@ -11,18 +11,15 @@
 </head>
 <body>
 	<div class="menu-nav">
-		<div class="nav-item nav-icon" style="margin-left: 25px;">
-			<a href="../index.html" style="background-image: url('../../res/icons/svg/005-restaurant.svg')">
+		<div class="nav-item">
+			<a class="nav-icon" href="../index.html"
+				style="background-image: url('../../res/icons/svg/005-restaurant.svg')">
 			</a>
-		</div>
-		<div class="nav-item" style="margin-left: 2px;">
 			<a href="../index.html"><p> HOME </p></a>
 		</div>
-		<div class="nav-item nav-icon" style="margin-left: 15px;">
-			<a href="../contact.html" style="background-image: url('../../res/icons/svg/003-phone-with-message.svg')">
+		<div class="nav-item">
+			<a class="nav-icon" href="../contact.html" style="background-image: url('../../res/icons/svg/003-phone-with-message.svg')">
 			</a>
-		</div>
-		<div class="nav-item" style="margin-left: 0px;">
 			<p class="phone">
 				<a href="tel:+1-250-763-2988">250-763-2988</a> &nbsp;//&nbsp; <a href="tel:+1-250-763-2986">250-763-2986</a>
 			</p>
@@ -78,7 +75,7 @@
 					<p>BEEF CHOW BROCOLLI <span>$11.50</span></p>
 					<p class="desc">stir-fried brocolli and beef, with carrots and onions. a popular classic </p>
 				</div>
-				<div class="item last">
+				<div class="last item">
 					<p>ALMOND GAI DING <span>$12.95</span></p>
 					<p class="desc">stir-fried diced chicken with almonds and assorted veggies</p>
 				</div>
@@ -100,7 +97,7 @@
 					<p class="desc"><strong> choose one: BEEF / CHICKEN / SHRIMP / SQUID </strong> <br><br>
 					stif-fried snow peas + topping of choice + assorted veggies </p>
 				</div>
-				<div class="item last">
+				<div class="last item">
 					<p> BEEF &amp; GREEN PEPPERS w/ BLACK BEAN SAUCE <span>$11.50</span></p>
 					<p class="desc">beef + green peppers stir-fried with carrots and onions in a black bean sauce </p>
 				</div>
@@ -111,13 +108,13 @@
 			<h1> EGG FOO YUNG </h1>
 
 			<div class="column">
-				<div class="item" style="border:none;">
+				<div class="last item splitter">
 					<p>HOUSE SPECIAL EGG FOO YUNG <span>$12.95</span></p>
 					<p class="desc">pan-fried egg pancakes with shrimp, pork, chicken, and assorted veggies </p>
 				</div>
 			</div>
 			<div class="column">
-				<div class="item" style="border:none;">
+				<div class="last item" >
 					<p>EGG FOO YUNG <span>$10.95</span></p>
 					<p class="desc">pan-fried egg pancake + topping of choice </p>
 				</div>
