--- a/public/menu/friedrice+chowmein.html
+++ b/public/menu/friedrice+chowmein.html
@@ -12,18 +12,15 @@
 </head>
 <body>
 	<div class="menu-nav">
-		<div class="nav-item nav-icon" style="margin-left: 25px;">
-			<a href="../index.html" style="background-image: url('../../res/icons/svg/005-restaurant.svg')">
+		<div class="nav-item">
+			<a class="nav-icon" href="../index.html"
+				style="background-image: url('../../res/icons/svg/005-restaurant.svg')">
 			</a>
-		</div>
-		<div class="nav-item" style="margin-left: 2px;">
 			<a href="../index.html"><p> HOME </p></a>
 		</div>
-		<div class="nav-item nav-icon" style="margin-left: 15px;">
-			<a href="../contact.html" style="background-image: url('../../res/icons/svg/003-phone-with-message.svg')">
+		<div class="nav-item">
+			<a class="nav-icon" href="../contact.html" style="background-image: url('../../res/icons/svg/003-phone-with-message.svg')">
 			</a>
-		</div>
-		<div class="nav-item" style="margin-left: 0px;">
 			<p class="phone">
 				<a href="tel:+1-250-763-2988">250-763-2988</a> &nbsp;//&nbsp; <a href="tel:+1-250-763-2986">250-763-2986</a>
 			</p>
@@ -41,7 +38,9 @@
 			<a href="combos.html"><li>COMBOS</li></a>
 		</ul>
 	</div>
-	<div class="suboptions menu" style="margin-top: 45px;">
+	<div class="suboptions menu">
+		<input type="checkbox" id="menu-toggle" />
+			<label for="menu-toggle" class="label-toggle"></label>
 		<ul>
 			<a href="appetizers+soup.html">
 				<li> APPETIZERS + SOUP </li></a>
@@ -62,7 +61,6 @@
 	</div>
 	<div id="contentAS">
 		<section class="content">
-
 			<h1> FRIED RICE </h1>
 			<div class="column">
 				<div class="item">
@@ -74,18 +72,18 @@
 					<p class="desc"><strong>choose one: BEEF / CHICKEN / MUSHROOM / PORK / SHRIMP / VEGGIE </strong> <br><br>
 					fried rice + topping of your choice + assorted veggies</p>
 				</div>
-				<div class="item" style="border:none;">
+				<div class="last item">
 					<p>STEAMED RICE <span>$2/small &nbsp; &nbsp; $4.5/large</span></p>
 				</div>
 			</div>
-			<div class="column" style="float: right;">
+			<div class="column">
 				<div class="item">
 					<p>TOMATO FRIED RICE <span>$12.50</span></p>
 					<p class="desc"><strong>choose one: BEEF / CHICKEN / SHRIMP
 					</strong> <br><br>
 					fried rice + topping of your choice + assorted veggies + tomato sauce</p>
 				</div>
-				<div class="item" style="border:none;">
+				<div class="last item">
 					<p>CURRY SAUCE FRIED RICE <span>$12.50</span></p>
 					<p class="desc"><strong>choose one: BEEF / CHICKEN / SHRIMP
 					</strong> <br><br>
@@ -93,8 +91,7 @@
 				</div>
 			</div>
 		</section>
-
-		<section class="content" style="margin-top: 80px;">
+		<section class="content">
 			<h1> CHOW MEIN</h1> 
 			<div class="column">
 				<div class="item">
@@ -107,14 +104,14 @@
 					chow mein + topping of your choice + assorted veggies
 					</p>
 				</div>
-				<div class="item" style="border:none;">
+				<div class="last item">
 					<p>TOMATO SAUCE CHOW MEIN <span>$12.50</span></p>
 					<p class="desc"><strong> choose one: BEEF / CHICKEN / SHRIMP
 					</strong> <br><br>
 					chow mein + topping of your choice + assorted veggies + tomato sauce </p>
 				</div>
 			</div>
-			<div class="column" style="float: right;">
+			<div class="column">
 				<div class="item">
 					<p>CANTONESE-STYLE CHOW MEIN [ crispy ] <span>$13.50</span></p>
 					<p class="desc"> crispy chow mein topped with stir-fried shrimp, pork, chicken, and assorted diced vegetables </p>
@@ -127,7 +124,7 @@
 					<p>SHANGHAI NOODLES <span>$12.50</span></p>
 					<p class="desc"> stir-fried shanghai noodles with chicken and assorted veggies </p>
 				</div>
-				<div class="item" style="border:none;">
+				<div class="last item">
 					<p>PLAIN CHOW MEIN <span>$3/small &nbsp; &nbsp; $6.5/large</span></p>
 				</div>
 			</div>
@@ -142,7 +139,7 @@
 			<a href="note.html"><li>NOTE</li></a>
 		</ul>
 	</div>
-	<div class="finalnote" >
+	<div class="finalnote">
 		<p>Copyright &copy; 2018 The Orient Restaurant . All rights reserved . Icons designed by <a href="https://www.flaticon.com">Flaticon</a></p>
 	</div>
 </body>
