--- a/public/menu/pork+chicken.html
+++ b/public/menu/pork+chicken.html
@@ -12,18 +12,15 @@
 </head>
 <body>
 	<div class="menu-nav">
-		<div class="nav-item nav-icon" style="margin-left: 25px;">
-			<a href="../index.html" style="background-image: url('../../res/icons/svg/005-restaurant.svg')">
+		<div class="nav-item">
+			<a class="nav-icon" href="../index.html"
+				style="background-image: url('../../res/icons/svg/005-restaurant.svg')">
 			</a>
-		</div>
-		<div class="nav-item" style="margin-left: 2px;">
 			<a href="../index.html"><p> HOME </p></a>
 		</div>
-		<div class="nav-item nav-icon" style="margin-left: 15px;">
-			<a href="../contact.html" style="background-image: url('../../res/icons/svg/003-phone-with-message.svg')">
+		<div class="nav-item">
+			<a class="nav-icon" href="../contact.html" style="background-image: url('../../res/icons/svg/003-phone-with-message.svg')">
 			</a>
-		</div>
-		<div class="nav-item" style="margin-left: 0px;">
 			<p class="phone">
 				<a href="tel:+1-250-763-2988">250-763-2988</a> &nbsp;//&nbsp; <a href="tel:+1-250-763-2986">250-763-2986</a>
 			</p>
@@ -41,7 +38,9 @@
 			<a href="combos.html"><li>COMBOS</li></a>
 		</ul>
 	</div>
-	<div class="suboptions menu" style="margin-top: 45px;">
+	<div class="suboptions menu">
+		<input type="checkbox" id="menu-toggle" />
+			<label for="menu-toggle" class="label-toggle"></label>
 		<ul>
 			<a href="appetizers+soup.html">
 				<li> APPETIZERS + SOUP </li></a>
@@ -77,13 +76,13 @@
 					<p>HONEY &amp; GARLIC PORK <span>$11.95</span></p>
 					<p class="desc"> fried boneless pork with our secret honey-garlic sauce </p>
 				</div>
-				<div class="item">
+				<div class="last item">
 					<p>BBQ PORK [ sliced ] <span>$11.95</span></p>
 					<p class="desc"> slow-roasted marinated pork topped off with a light sweet glaze </p>
 				</div>
 			</div>
 
-			<div class="column" style="float: right;">
+			<div class="column">
 				<div class="item">
 					<p>SWEET &amp; SOUR SPARERIBS <span>$11.50</span></p>
 					<p class="desc"> fried pork spareribs with our made-from-scratch sweet &amp; sour sauce </p>
@@ -92,16 +91,15 @@
 					<p>DRY GARLIC SPARERIBS <span>$11.50</span></p>
 					<p class="desc">fried pork spareribs lightly seasoned with garlic salt</p>
 				</div>
-				<div class="item" style="broder:none;">
+				<div class="last item">
 					<p>HONEY &amp; GARLIC SPARERIBS <span>$11.95</span></p>
 					<p class="desc">fried pork spareribs with our secret honey-garlic sauce</p>
 				</div>
 			</div>
 		</section>
 
-		<section class="content" style="margin-top: 80px;">
+		<section class="content">
 			<h1> CHICKEN </h1>
-
 			<div class="column">
 				<div class="item">
 					<p>DEEP FRIED ALMOND CHICKEN <span>$11.50</span></p>
@@ -116,13 +114,13 @@
 					<p class="desc"><strong> choose one: BLACK BEAN SAUCE / CURRY SAUCE </strong> <br><br>
 					stir-fried diced chicken + your choice of sauce + assorted vegetables </p>
 				</div>
-				<div class="item" style="border:none;">
+				<div class="last item">
 					<p>HONEY GARLIC SEASAME CHICKEN <span>$13.95</span></p>
 					<p class="desc"> deep-fried diced chicken paired with our secret honey-garlic sauce and spinkled with seasame</p>
 				</div>
 			</div>
 
-			<div class="column" style="float: right;">
+			<div class="column">
 				<div class="item">
 					<p>DEEP FRIED CHICKEN WINGS <span>$11.50</span></p>
 					<p class="desc"> chicken wings coated with our uniquely seasoned batter and deep-fried </p>
@@ -131,7 +129,7 @@
 					<p>HONEY GARLIC CHICKEN WINGS <span>$11.95</span></p>
 					<p class="desc"> our classic chicken wings topped off with a sweet honey-garlic sauce</p>
 				</div>
-				<div class="item" style="border:none;">
+				<div class="last item">
 					<p>HOT &amp; SPICY CHICKEN WINGS <span>$11.95</span></p>
 					<p class="desc"> our classic chicken wings seasoned with hot chilis and topped off with peppers and onions </p>
 				</div>
