--- a/public/menu/seafood+specialties.html
+++ b/public/menu/seafood+specialties.html
@@ -7,23 +7,19 @@
 
 	<link href="menustyles.css" rel="stylesheet" type="text/css">
 	<link href="../styles.css" rel="stylesheet" type="text/css">
-	<script src="loose-scripts.js"></script>
 	<title>THE ORIENT</title>
 </head>
 <body>
 	<div class="menu-nav">
-		<div class="nav-item nav-icon" style="margin-left: 25px;">
-			<a href="../index.html" style="background-image: url('../../res/icons/svg/005-restaurant.svg')">
+		<div class="nav-item">
+			<a class="nav-icon" href="../index.html"
+				style="background-image: url('../../res/icons/svg/005-restaurant.svg')">
 			</a>
-		</div>
-		<div class="nav-item" style="margin-left: 2px;">
 			<a href="../index.html"><p> HOME </p></a>
 		</div>
-		<div class="nav-item nav-icon" style="margin-left: 15px;">
-			<a href="../contact.html" style="background-image: url('../../res/icons/svg/003-phone-with-message.svg')">
+		<div class="nav-item">
+			<a class="nav-icon" href="../contact.html" style="background-image: url('../../res/icons/svg/003-phone-with-message.svg')">
 			</a>
-		</div>
-		<div class="nav-item" style="margin-left: 0px;">
 			<p class="phone">
 				<a href="tel:+1-250-763-2988">250-763-2988</a> &nbsp;//&nbsp; <a href="tel:+1-250-763-2986">250-763-2986</a>
 			</p>
@@ -41,7 +37,9 @@
 			<a href="combos.html"><li>COMBOS</li></a>
 		</ul>
 	</div>
-	<div class="suboptions menu" style="margin-top: 45px;">
+	<div class="suboptions menu">
+		<input type="checkbox" id="menu-toggle" />
+			<label for="menu-toggle" class="label-toggle"></label>
 		<ul>
 			<a href="appetizers+soup.html">
 				<li> APPETIZERS + SOUP </li></a>
@@ -63,7 +61,6 @@
 	<div id="contentAS">
 		<section class="content">
 			<h1> SEAFOOD </h1>
-
 			<div class="column">
 				<div class="item">
 					<p>DEEP FRIED PRAWNS &nbsp;[16] <span>$12.95</span></p>
@@ -75,13 +72,12 @@
 					<p class="desc"><strong>choose one: &nbsp;BLACK BEAN SAUCE / CURRY SAUCE / SZECHUAN SAUCE / TOMATO SAUCE </strong> <br><br>
 					stir-fried prawns + sauce of choice + assorted veggies </p>
 				</div>
-				<div class="item" style="border:none;">
+				<div class="last item">
 					<p>SEAFOOD IN A NEST <span>$19.95</span></p>
 					<p class="desc"> stir-fried seafood medley of prawns, scallops, squid, and assorted veggies on top of a fried potato-hash nest</p>
 				</div>
 			</div>
-
-			<div class="column" style="float: right;">
+			<div class="column">
 				<div class="item">
 					<p>FRIED SCALLOPS WITH SNOW PEA <span>$17.95</span></p>
 					<p class="desc"> fried whole scallops stir-fried with snow peas and assorted veggies </p>
@@ -91,16 +87,15 @@
 					</span></p>
 					<p class="desc"> a sizzling stir-fry of whole scallops, ginger, green onion, and assorted veggies </p>
 				</div>
-				<div class="item" style="border:none;">
+				<div class="last item">
 					<p>DEEP FRIED SQUID WITH SPICY SALT <span>$13.95</span></p>
 					<p class="desc"> fried squid with pepper-salt and chili, topped off with quickly stif-fried bell peppers, onions, and carrots. a house specialty </p>
 				</div>
 			</div>
 		</section>
 
-		<section class="content" style="margin-top: 80px;">
-			<h1 style="margin-bottom: 20px;"> EXOTIC SPECIALTIES </h1>
-
+		<section class="content">
+			<h1> EXOTIC SPECIALTIES </h1>
 			<div class="column">
 				<div class="item">
 					<p> PHOENIX IN A NEST <span>$14.95</span></p>
@@ -139,13 +134,13 @@
 					<p> MONGOLIAN BEEF &nbsp;[ HOT ] <span>$13.95</span></p>
 					<p class="desc"> an unique and saucy stir-fry featuring tender sliced beef, mushrooms, green peppers and onions in a hot &amp; spicy sauce. <br><br> *served on a sizzling plate </p>
 				</div>
-				<div class="item" style="border:none;">
+				<div class="last item">
 					<p> SZECHUAN BEEF or CHICKEN <span>$13.95</span></p>
 					<p class="desc"> sliced beef or chicken stir-fried with assorted veggies in a spicy and savoury Szechuan sauce </p>
 				</div>
 			</div>
 
-			<div class="column" style="float: right;">
+			<div class="column">
 				<div class="item">
 					<p> SLICED BEEF WITH OYSTER SAUCE <span>$13.95</span></p>
 					<p class="desc"> tender sliced beef stir-fried with assorted veggies in an oyster sauce </p>
@@ -182,7 +177,7 @@
 					<p> MA PO TOFU with MINCED BEEF <span>$12.95</span></p>
 					<p class="desc"> tofu braised with minced beef, assorted peppers, and onions in a spicy bean sauce </p>
 				</div>
-				<div class="item" style="border:none;">
+				<div class="last item">
 					<p> KULU CHICKEN or PORK <span>$13.95</span></p>
 					<p class="desc"> fried boneless diced chicken or pork with pineapple, peppers, and green onions in a sweet &amp; spicy sauce </p>
 				</div>
