--- a/public/menu/sides+sauces.html
+++ b/public/menu/sides+sauces.html
@@ -7,23 +7,19 @@
 
 	<link href="menustyles.css" rel="stylesheet" type="text/css">
 	<link href="../styles.css" rel="stylesheet" type="text/css">
-	<script src="loose-scripts.js"></script>
 	<title>THE ORIENT</title>
 </head>
 <body>
 	<div class="menu-nav">
-		<div class="nav-item nav-icon" style="margin-left: 25px;">
-			<a href="../index.html" style="background-image: url('../../res/icons/svg/005-restaurant.svg')">
+		<div class="nav-item">
+			<a class="nav-icon" href="../index.html"
+				style="background-image: url('../../res/icons/svg/005-restaurant.svg')">
 			</a>
-		</div>
-		<div class="nav-item" style="margin-left: 2px;">
 			<a href="../index.html"><p> HOME </p></a>
 		</div>
-		<div class="nav-item nav-icon" style="margin-left: 15px;">
-			<a href="../contact.html" style="background-image: url('../../res/icons/svg/003-phone-with-message.svg')">
+		<div class="nav-item">
+			<a class="nav-icon" href="../contact.html" style="background-image: url('../../res/icons/svg/003-phone-with-message.svg')">
 			</a>
-		</div>
-		<div class="nav-item" style="margin-left: 0px;">
 			<p class="phone">
 				<a href="tel:+1-250-763-2988">250-763-2988</a> &nbsp;//&nbsp; <a href="tel:+1-250-763-2986">250-763-2986</a>
 			</p>
@@ -41,7 +37,9 @@
 			<a href="combos.html"><li>COMBOS</li></a>
 		</ul>
 	</div>
-	<div class="suboptions menu" style="margin-top: 45px;">
+	<div class="suboptions menu">
+		<input type="checkbox" id="menu-toggle" />
+			<label for="menu-toggle" class="label-toggle"></label>
 		<ul>
 			<a href="appetizers+soup.html">
 				<li> APPETIZERS + SOUP </li></a>
@@ -63,38 +61,36 @@
 	<div id="contentAS">
 		<section class="content">
 			<h1> SIDES </h1>
-
 			<div class="column">
-				<div class="item" style="border: none;">
+				<div class="last item splitter">
 					<p>CHICKEN FINGERS &amp; FRIES <span>$8.00</span></p>
 					<p class="desc"> chicken fingers on a bed of fries, with a side of sweet &amp; sour sauce </p>
 				</div>
 			</div>
 
-			<div class="column" style="float: right;">
-				<div class="item" style="border: none;">
+			<div class="column">
+				<div class="last item">
 				<p>FRENCH FRIES <span>$4.25</span></p>
 				<p class="desc"> just a side order of fries! :) </p>
 				</div>
 			</div>
 		</section>
 
-		<section class="content" style="margin-top: 80px;">
+		<section class="content">
 			<h1> SAUCES </h1>
-
 			<div class="column">
 				<div class="item">
 					<p>SWEET &amp; SOUR SAUCE <span>$2.00</span></p>
 				</div>
-				<div class="item">
+				<div class="last item">
 					<p>LEMON SAUCE <span>$2.00</span></p>
 				</div>
 			</div>
-			<div class="column" style="float: right;">
+			<div class="column">
 				<div class="item">
 					<p>CURRY SAUCE <span>$2.00</span></p>
 				</div>
-				<div class="item">
+				<div class="last item">
 					<p>BLACK BEAN SAUCE <span>$2.00</span></p>
 			</div>
 		</section>
