--- a/public/menu/seafood+specialties.html
+++ b/public/menu/seafood+specialties.html
@@ -58,7 +58,7 @@
 	<div class="menu title">
 		<p> SEAFOOD + SPECIALTIES </p>
 	</div>
-	<div id="contentAS">
+	<div class="contentAS">
 		<section class="content">
 			<h1> SEAFOOD </h1>
 			<div class="column">
@@ -93,7 +93,6 @@
 				</div>
 			</div>
 		</section>
-
 		<section class="content">
 			<h1> EXOTIC SPECIALTIES </h1>
 			<div class="column">
