--- a/public/menu/sides+sauces.html
+++ b/public/menu/sides+sauces.html
@@ -58,7 +58,7 @@
 	<div class="menu title">
 		<p> SIDES + SAUCES </p>
 	</div>
-	<div id="contentAS">
+	<div class="contentAS">
 		<section class="content">
 			<h1> SIDES </h1>
 			<div class="column">
