--- a/public/menu/appetizers+soup.html
+++ b/public/menu/appetizers+soup.html
@@ -57,7 +57,7 @@
 	<div class="menu title">
 		<p> APPETIZERS + SOUP </p>
 	</div>
-	<div id="contentAS">
+	<div class="contentAS">
 		<section class="content">
 			<h1> APPETIZERS </h1>
 			<div class="column">
