--- a/public/menu/chopsuey+eggfooyung.html
+++ b/public/menu/chopsuey+eggfooyung.html
@@ -58,7 +58,7 @@
 	<div class="menu title">
 		<p> CHOP SUEY + EGG FOO YUNG </p>
 	</div>
-	<div id="contentAS">
+	<div class="contentAS">
 		<section class="content">
 			<h1> CHOP SUEY </h1>
 			<div class="column">
