--- a/public/menu/friedrice+chowmein.html
+++ b/public/menu/friedrice+chowmein.html
@@ -59,7 +59,7 @@
 	<div class="menu title">
 		<p> FRIED RICE + CHOW MEIN </p>
 	</div>
-	<div id="contentAS">
+	<div class="contentAS">
 		<section class="content">
 			<h1> FRIED RICE </h1>
 			<div class="column">
