--- a/public/menu/pork+chicken.html
+++ b/public/menu/pork+chicken.html
@@ -59,7 +59,7 @@
 	<div class="menu title">
 		<p> PORK + CHICKEN </p>
 	</div>
-	<div id="contentAS">
+	<div class="contentAS">
 		<section class="content">
 			<h1> PORK </h1>
 
