finished all page drafts :); added small script to re-order menu items; minor stylistic changes

--- a/public/menu/lunch.html
+++ b/public/menu/lunch.html
@@ -37,7 +37,7 @@
 			<a href="combos.html"><li>COMBOS</li></a>
 		</ul>
 	</div>
-	<div class="suboptions menu" style="margin-top: 45px;">
+	<div class="suboptions menu">
 		<input type="checkbox" id="menu-toggle" />
 			<label for="menu-toggle" class="label-toggle"></label>
 		<ul>
@@ -123,7 +123,7 @@
 			</div>
 		</section>
 	</div>
-	<div class="footer menu" style="margin-top: 0px;">
+	<div class="footer menu">
 		<ul>
 			<a href="../index.html"><li>HOME</li></a>
 			<a href="lunch.html"><li>LUNCH</li></a>
