--- a/public/menu/combos.html
+++ b/public/menu/combos.html
@@ -12,18 +12,15 @@
 </head>
 <body>
 	<div class="menu-nav">
-		<div class="nav-item nav-icon" style="margin-left: 25px;">
-			<a href="../index.html" style="background-image: url('../../res/icons/svg/005-restaurant.svg')">
+		<div class="nav-item">
+			<a class="nav-icon" href="../index.html"
+				style="background-image: url('../../res/icons/svg/005-restaurant.svg')">
 			</a>
-		</div>
-		<div class="nav-item" style="margin-left: 2px;">
 			<a href="../index.html"><p> HOME </p></a>
 		</div>
-		<div class="nav-item nav-icon" style="margin-left: 15px;">
-			<a href="../contact.html" style="background-image: url('../../res/icons/svg/003-phone-with-message.svg')">
+		<div class="nav-item">
+			<a class="nav-icon" href="../contact.html" style="background-image: url('../../res/icons/svg/003-phone-with-message.svg')">
 			</a>
-		</div>
-		<div class="nav-item" style="margin-left: 0px;">
 			<p class="phone">
 				<a href="tel:+1-250-763-2988">250-763-2988</a> &nbsp;//&nbsp; <a href="tel:+1-250-763-2986">250-763-2986</a>
 			</p>
@@ -41,7 +38,9 @@
 			<a href="combos.html"><li>COMBOS</li></a>
 		</ul>
 	</div>
-	<div class="suboptions menu" style="margin-top: 45px;">
+	<div class="suboptions menu">
+		<input type="checkbox" id="menu-toggle" />
+			<label for="menu-toggle" class="label-toggle"></label>
 		<ul>
 			<a href="appetizers+soup.html">
 				<li> APPETIZERS + SOUP </li></a>
@@ -57,45 +56,45 @@
 				<li> SIDES + SAUCES </li></a>
 		</ul>
 	</div>
-	<div id="contentAS" style="margin-top: 130px;">
+	<div class="contentAS">
 		<section class="content">
 			<h1> COMBOS FOR ONE </h1>
 			<div class="column">
 				<div class="item">
 					<p>[ # 01 ] <span>$12.50</span></p>
-					<p class="desc">CHICKEN CHOW MEIN &nbsp;<b>+</b>&nbsp; SWEET &amp; SOUR PORK <br>&nbsp;<b>+</b>&nbsp; DEEP FRIED PRAWNS</p>
+					<p class="desc">CHICKEN CHOW MEIN &nbsp;<b>+</b>&nbsp; SWEET &amp; SOUR PORK &nbsp;<b>+</b>&nbsp; DEEP FRIED PRAWNS</p>
 				</div>
 				<div class="item">
 					<p>[ # 02 ] <span>$12.50</span></p>
-					<p class="desc">CHICKEN CHOW MEIN &nbsp;<b>+</b>&nbsp; SWEET &amp; SOUR PORK <br>&nbsp;<b>+</b>&nbsp; ALMOND CHICKEN </p>
+					<p class="desc">CHICKEN CHOW MEIN &nbsp;<b>+</b>&nbsp; SWEET &amp; SOUR PORK &nbsp;<b>+</b>&nbsp; ALMOND CHICKEN </p>
 				</div>
 				<div class="item">
 					<p>[ # 03 ] <span>$12.50</span></p>
-					<p class="desc">CHICKEN CHOW MEIN &nbsp;<b>+</b>&nbsp; SWEET &amp; SOUR PORK <br>&nbsp;<b>+</b>&nbsp; CHICKEN FRIED RICE </p>
+					<p class="desc">CHICKEN CHOW MEIN &nbsp;<b>+</b>&nbsp; SWEET &amp; SOUR PORK &nbsp;<b>+</b>&nbsp; CHICKEN FRIED RICE </p>
 				</div>
-				<div class="item" style="border:none;">
+				<div class="last item">
 					<p>[ # 04 ] <span>$12.50</span></p>
-					<p class="desc">CHICKEN CHOW MEIN &nbsp;<b>+</b>&nbsp; SWEET &amp; SOUR PORK <br>&nbsp;<b>+</b>&nbsp; BEEF CHOP SUEY </p>
+					<p class="desc">CHICKEN CHOW MEIN &nbsp;<b>+</b>&nbsp; SWEET &amp; SOUR PORK &nbsp;<b>+</b>&nbsp; BEEF CHOP SUEY </p>
 				</div>
 			</div>
 
-			<div class="column" style="float: right;">
+			<div class="column">
 				<div class="item">
 					<p>[ # 05 ] &nbsp; &nbsp; VEGGIE COMBO <span>$12.50</span></p>
-					<p class="desc">VEGGIE FRIED RICE &nbsp;<b>+</b>&nbsp; MUSHROOM CHOP SUEY &nbsp;+&nbsp; MUCHROOM CHOW MEIN </p>
+					<p class="desc">VEGGIE FRIED RICE &nbsp;<b>+</b>&nbsp; MUSHROOM CHOP SUEY &nbsp;<b>+</b>&nbsp; MUCHROOM CHOW MEIN </p>
 				</div>
 				<div class="item">
 					<p>[ # 06 ] &nbsp; &nbsp; COMBO KING <span>$14.95</span></p>
-					<p class="desc">CHICKEN CHOW MEIN &nbsp;+&nbsp; BEEF CHOP SUEY &nbsp;+&nbsp; SWEET &amp; SOUR PORK &nbsp;+&nbsp; DEEP FRIED PRAWNS </p>
+					<p class="desc">CHICKEN CHOW MEIN &nbsp;<b>+</b>&nbsp; BEEF CHOP SUEY &nbsp;<b>+</b>&nbsp; SWEET &amp; SOUR PORK &nbsp;<b>+</b>&nbsp; DEEP FRIED PRAWNS </p>
 				</div>
 				<div class="item">
 					<p>[ # 07 ] &nbsp; &nbsp; HOUSE COMBO A <span>$13.95</span></p>
-					<p class="desc">HOUSE SPECIAL CHOP SUEY &nbsp;+&nbsp; CHICKEN FRIED RICE &nbsp;+&nbsp; SWEET &amp; SOUR CHICKEN BALLS 
+					<p class="desc">HOUSE SPECIAL CHOP SUEY &nbsp;<b>+</b>&nbsp; CHICKEN FRIED RICE &nbsp;<b>+</b>&nbsp; SWEET &amp; SOUR CHICKEN BALLS 
 					</p>
 				</div>
-				<div class="item" style="border:none;">
+				<div class="last item">
 					<p>[ # 08 ] &nbsp; &nbsp; HOUSE COMBO B <span>$14.95</span></p>
-					<p class="desc">HOUSE SPECIAL CHOP SUEY &nbsp;+&nbsp; HOUSE SPECIAL FRIED RICE &nbsp;+&nbsp; GINGER BEEF </p>
+					<p class="desc">HOUSE SPECIAL CHOP SUEY &nbsp;<b>+</b>&nbsp; HOUSE SPECIAL FRIED RICE &nbsp;<b>+</b>&nbsp; GINGER BEEF </p>
 				</div>
 			</div>
 		</section>
