--- a/public/menu/familydinners.html
+++ b/public/menu/familydinners.html
@@ -7,23 +7,19 @@
 
 	<link href="menustyles.css" rel="stylesheet" type="text/css">
 	<link href="../styles.css" rel="stylesheet" type="text/css">
-	<script src="loose-scripts.js"></script>
 	<title>THE ORIENT</title>
 </head>
 <body>
 	<div class="menu-nav">
-		<div class="nav-item nav-icon" style="margin-left: 25px;">
-			<a href="../index.html" style="background-image: url('../../res/icons/svg/005-restaurant.svg')">
+		<div class="nav-item">
+			<a class="nav-icon" href="../index.html"
+				style="background-image: url('../../res/icons/svg/005-restaurant.svg')">
 			</a>
-		</div>
-		<div class="nav-item" style="margin-left: 2px;">
 			<a href="../index.html"><p> HOME </p></a>
 		</div>
-		<div class="nav-item nav-icon" style="margin-left: 15px;">
-			<a href="../contact.html" style="background-image: url('../../res/icons/svg/003-phone-with-message.svg')">
+		<div class="nav-item">
+			<a class="nav-icon" href="../contact.html" style="background-image: url('../../res/icons/svg/003-phone-with-message.svg')">
 			</a>
-		</div>
-		<div class="nav-item" style="margin-left: 0px;">
 			<p class="phone">
 				<a href="tel:+1-250-763-2988">250-763-2988</a> &nbsp;//&nbsp; <a href="tel:+1-250-763-2986">250-763-2986</a>
 			</p>
@@ -41,7 +37,9 @@
 			<a href="combos.html"><li>COMBOS</li></a>
 		</ul>
 	</div>
-	<div class="suboptions menu" style="margin-top: 45px;">
+	<div class="suboptions menu">
+		<input type="checkbox" id="menu-toggle" />
+			<label for="menu-toggle" class="label-toggle"></label>
 		<ul>
 			<a href="appetizers+soup.html">
 				<li> APPETIZERS + SOUP </li></a>
@@ -57,7 +55,7 @@
 				<li> SIDES + SAUCES </li></a>
 		</ul>
 	</div>
-	<div id="contentAS" style="margin-top: 130px;">
+	<div class="contentAS">
 		<section class="content">
 			<h1> FAMILY DINNERS </h1>
 			<div class="column">
@@ -74,37 +72,35 @@
 					<p class="family desc">
 						<strong>choose one: &nbsp;SPRING ROLLS / WON TON SOUP </strong>
 						<br><br>
-						CHICKEN FRIED RICE <b>+</b> BEEF CHOP SUEY <b>+</b> ALMOND CHICKEN <br><b>+</b> SWEET &amp; SOUR PORK </p>
+						CHICKEN FRIED RICE <b>+</b> BEEF CHOP SUEY <b>+</b> ALMOND CHICKEN <b>+</b> SWEET &amp; SOUR PORK </p>
 				</div>
-				<div class="item" style="border:none">
+				<div class="last item moved">
 					<p>ADDITIONAL PERSON <span>$13 / person </span></p>
 					<p class="family desc">
 						<b>+</b> add an additional person to any regular family dinner
 					</p>
 				</div>
 			</div>
-
-			<div class="column" style="float: right;">
+			<div class="column">
 				<div class="item">
 					<p>DINNER FOR FOUR <span>$54.95</span></p>
 					<p class="family desc">
 						<strong>choose one: &nbsp;SPRING ROLLS / WON TON SOUP</strong>
 						<br><br>
-						HOUSE CHOW MEIN <b>+</b> HOUSE FRIED RICE <b>+</b> BEEF CHOP SUEY <br><b>+</b> DEEP FRIED PRAWNS <b>+</b> SWEET &amp; SOUR PORK 
+						HOUSE CHOW MEIN <b>+</b> HOUSE FRIED RICE <b>+</b> BEEF CHOP SUEY <b>+</b> DEEP FRIED PRAWNS <b>+</b> SWEET &amp; SOUR PORK 
 					</p>
 				</div>
-				<div class="item" style="border:none;">
+				<div class="family last item">
 					<p>DINNER FOR SIX <span>$79.95</span></p>
 					<p class="family desc">
 						<strong>choose one: &nbsp;SPRING ROLLS / WON TON SOUP </strong>
 						<br><br>
-						HOUSE CHOW MEIN <b>+</b> HOUSE FRIED RICE <b>+</b> ALMOND GAI DING <br><b>+</b> ALMOND CHICKEN <b>+</b> DEEP FRIED PRAWNS <b>+</b> SWEET &amp; SOUR PORK
+						HOUSE CHOW MEIN <b>+</b> HOUSE FRIED RICE <b>+</b> ALMOND GAI DING <b>+</b> ALMOND CHICKEN <b>+</b> DEEP FRIED PRAWNS <b>+</b> SWEET &amp; SOUR PORK
 					</p>
 				</div>
 			</div>
 		</section>
-
-		<section class="content" style="margin-top: 100px;">
+		<section class="content">
 			<h1> DELUXE FAMILY DINNERS </h1>
 			<div class="column">
 				<div class="item">
@@ -112,7 +108,7 @@
 					<p class="family desc">
 						<strong>choose one: &nbsp;SPRING ROLLS / WON TON SOUP / HOT &amp; SOUR SOUP </strong>
 						<br><br>
-						HOUSE SPECIAL CHOW MEIN <b>+</b> ALMOND GAI DING <b>+</b> GINGER BEEF <br><b>+</b> STEAMED RICE 
+						HOUSE SPECIAL CHOW MEIN <b>+</b> ALMOND GAI DING <b>+</b> GINGER BEEF <b>+</b> STEAMED RICE 
 					</p>
 				</div>
 				<div class="item">
@@ -120,34 +116,32 @@
 					<p class="family desc">
 						<strong>choose one: &nbsp;SPRING ROLLS / WON TON WOUP / HOT &amp; SOUR SOUP </strong>
 						<br><br>
-						HOUSE SPECIAL CHOP SUEY <b>+</b> CANTONESE-STYLE CHOW MEIN <br>
-						<b>+</b> SWEET &amp; SOUR CHICKEN BALLS <b>+</b> HONEY GARLIC RIBS <br><b>+</b> STEAMED RICE
+						HOUSE SPECIAL CHOP SUEY <b>+</b> CANTONESE-STYLE CHOW MEIN <b>+</b> SWEET &amp; SOUR CHICKEN BALLS <b>+</b> HONEY GARLIC RIBS <b>+</b> STEAMED RICE
 					</p>
 				</div>
-				<div class="item" style="border:none">
+				<div class="last item moved">
 					<p>ADDITIONAL PERSON <span>$16 / person </span></p>
 					<p class="family desc">
 						<b>+</b> add an additional person to any deluxe family dinner
 					</p>
 				</div>
 			</div>
-			<div class="column" style="float: right;">
+			<div class="column">
 				<div class="item">
 					<p>DELUXE DINNER FOR FOUR <span>$64.95</span></p>
 					<p class="family desc">
 						<strong>choose one: &nbsp;SPRING ROLLS / WON TON WOUP / HOT &amp; SOUR SOUP </strong>
 						<br><br>
-						CANTONESE-STYLE CHOW MEIN <b>+</b> ALMOND GAI DING <br><b>+</b> SWEET &amp; SOUR CHICKEN BALLS <b>+</b> HONEY GARLIC RIBS <br>
+						CANTONESE-STYLE CHOW MEIN <b>+</b> ALMOND GAI DING <b>+</b> SWEET &amp; SOUR CHICKEN BALLS <b>+</b> HONEY GARLIC RIBS <br>
 						<b>+</b> WHOLE PRAWNS with BLACK BEAN SAUCE <b>+</b> STEAMED RICE
 					</p>
 				</div>
-				<div class="item" style="border:none;">
+				<div class="family last item">
 					<p>DELUXE DINNER FOR SIX <span>$89.95</span></p>
 					<p class="family desc">
 						<strong>choose one: &nbsp;SPRING ROLLS / WON TON WOUP / HOT &amp; SOUR SOUP </strong>
 						<br><br>
-						ALMOND GAI DING <b>+</b> CANTONESE-STYLE CHOW MEIN <br>
-						<b>+</b> GINGER BEEF <b>+</b> WHOLE PRAWNS with BLACK BEAN SAUCE <br><b>+</b> LEMON CHICKEN <b>+</b> SWEET &amp; SOUR PORK with PINEAPPLE <br><b>+</b> STEAMED RICE 
+						ALMOND GAI DING <b>+</b> CANTONESE-STYLE CHOW MEIN <b>+</b> GINGER BEEF <b>+</b> WHOLE PRAWNS with BLACK BEAN SAUCE <b>+</b> LEMON CHICKEN <b>+</b> SWEET &amp; SOUR PORK with PINEAPPLE <b>+</b> STEAMED RICE 
 					</p>
 				</div>
 			</div>
@@ -166,4 +160,22 @@
 	<div class="finalnote" >
 		<p>Copyright &copy; 2018 The Orient Restaurant . All rights reserved . Icons designed by <a href="https://www.flaticon.com">Flaticon</a></p>
 	</div>
+
+	<!-- change order of menu items based on screen-size -->
+	<script>
+		function reorder(x) {
+			var m = document.getElementsByClassName("moved");
+			var p = document.getElementsByClassName("column");
+			if(x.matches) {
+				p[1].appendChild(m[0]);
+				p[3].appendChild(m[1]);
+			}else {
+				p[0].appendChild(m[0]);
+				p[2].appendChild(m[1]);
+			}
+		}
+		var x = window.matchMedia("(max-width: 738px)");
+		reorder(x);
+		x.addListener(reorder);
+	</script>
 </body>
