final fixes (links, minor styling)

--- a/public/contact.html
+++ b/public/contact.html
@@ -17,7 +17,7 @@
 		<ul>
 			<a href="index.html"><li>HOME</li></a>
 			<a href="menu/lunch.html"><li>LUNCH</li></a>
-			<a href="menu/main.html"><li>MENU</li></a>
+			<a href="menu/appetizers+soup.html"><li>MENU</li></a>
 			<a href="contact.html"><li>CONTACT</li></a>
 			<a href="note.html"><li>NOTE</li></a>
 		</ul>
@@ -48,8 +48,8 @@
 		<div class="footer menu">
 		<ul>
 			<a href="index.html"><li>HOME</li></a>
-			<a href=""><li>LUNCH SPECIAL</li></a>
-			<a href="menu/main.html"><li>MENU</li></a>
+			<a href="menu/lunch.html"><li>LUNCH SPECIAL</li></a>
+			<a href="menu/appetizers+soup.html"><li>MENU</li></a>
 			<a href="contact.html"><li>CONTACT</li></a>
 			<a href="note.html"><li>NOTE</li></a>
 		</ul>
