--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,6 @@
 	<link href="https://fonts.googleapis.com/css?family=Julius+Sans+One" rel="stylesheet" text="text/css">
 
 	<link href="styles.css" rel="stylesheet" type="text/css">
-	<script src="loose-scripts.js"></script>
 	<title>THE ORIENT</title>
 </head>
 <body>
@@ -18,7 +17,7 @@
 		<ul>
 			<a href="index.html"><li>HOME</li></a>
 			<a href="menu/lunch.html"><li>LUNCH</li></a>
-			<a href="menu/main.html"><li>MENU</li></a>
+			<a href="menu/appetizers+soup.html"><li>MENU</li></a>
 			<a href="contact.html"><li>CONTACT</li></a>
 			<a href="note.html"><li>NOTE</li></a>
 		</ul>
@@ -55,7 +54,7 @@
 			</div>
 			<h1> TAKE-OUT </h1>
 			<p><b>10% off on ALL ORDERS over $25, yay!</b> Check out menu and take some of that lovely lovely food home!</p>
-			<form action="menu/appetizer+soup.html">
+			<form action="menu/appetizers+soup.html">
 				<button> &#9655; &nbsp; ALL-DAY MENU </button>
 			</form>
 		</div>
@@ -94,8 +93,8 @@
 	<div class="footer menu">
 		<ul>
 			<a href="index.html"><li>HOME</li></a>
-			<a href=""><li>LUNCH SPECIAL</li></a>
-			<a href="menu/main.html"><li>MENU</li></a>
+			<a href="menu/lunch"><li>LUNCH SPECIAL</li></a>
+			<a href="menu/appetizers+soup.html"><li>MENU</li></a>
 			<a href="contact.html"><li>CONTACT</li></a>
 			<a href="note.html"><li>NOTE</li></a>
 		</ul>
