--- a/public/menu/lunch.html
+++ b/public/menu/lunch.html
@@ -118,6 +118,7 @@
 						<li> &nbsp;EGG FOO YUNG&nbsp; </li>
 						<li> &nbsp;SWEET &amp; SOUR PORK&nbsp; </li>
 						<li> &nbsp;SWEET &amp; SOUR CHICKEN BALLS&nbsp; </li>
+						<li> &nbsp; </li>
 					</ul>
 				</div>
 			</div>
